add project_name column
